--- a/nembee/templates/index.html
+++ b/nembee/templates/index.html
@@ -64,7 +64,13 @@
 
         <div class="mod_toplist">
             <div class="toplist_hd">
-                <strong class="toplist_tit">{{title}}</strong>
+                {% set charts = {
+                    'rise': '云音乐飙升榜',
+                    'new': '云音乐新歌榜',
+                    'original': '网易原创歌曲榜',
+                    'hot': '云音乐热歌榜',
+                } %}
+                <strong class="toplist_tit">{{ charts[title] }} {{ day }}</strong>
                 <form action="/chart/{{title}}">
                     <div class="toplist-dp-wrap">
                       <input type="text" value="{{today}}" name="day" class="form-control bs-date-picker">
@@ -93,7 +99,7 @@
                             <div class="songlist_songname">
 
                                 <span class="songlist_songname_txt" style="visibility: visible;">
-                                    <a href={{ item[1].album.blurPicUrl }} class="songlist_cover album_name"><img onerror="this.src='//y.gtimg.cn/mediastyle/global/img/album_300.png?max_age=31536000';this.onerror=null;"
+                                    <a href="https://music.163.com/album?id={{ item[1].album.id }}" class="songlist_cover album_name"><img onerror="this.src='//y.gtimg.cn/mediastyle/global/img/album_300.png?max_age=31536000';this.onerror=null;"
                                             src={{ item[1].album.blurPicUrl }}
                                             alt={{ item[1].album.name }} class="songlist_pic" style="display: block; visibility: visible;"></a>
                                     <a href="https://music.163.com/song?id={{ item[1].id }}" class="js_song" title={{ item[1].name }}>{{ item[1].name }}[唱片公司：{{ item[1].album.company or 'N/A' }}]</a>
@@ -114,11 +120,11 @@
                     {% endfor %}
                 </ul>
 
-                <div class="mod_page_nav js_pager"><strong class="current">1</strong><a href="javascript:;" class="js_pageindex"
-                        data-index="2" hidefocus="">2</a><a href="javascript:;" class="js_pageindex" data-index="3"
-                        hidefocus="">3</a><a href="javascript:;" class="js_pageindex" data-index="4" hidefocus="">4</a><a
-                        href="javascript:;" class="next js_pageindex" data-index="2" title="下一页" hidefocus=""><span>&gt;</span></a></div>
-            </div>
+                <div class="nav-page">
+                        <nav aria-label="Page navigation" class="mod_page_nav js_pager">
+                                
+                              </nav> 
+                </div>
 
         </div>
 
