bug fixes, update check exists logic

--- a/nembee/templates/index.html
+++ b/nembee/templates/index.html
@@ -109,7 +109,7 @@
 
                             </div>
 
-                            <div class="songlist_artist" title={{ item }}>
+                            <div class="songlist_artist" title={{ item[1].artists[0].name }}>
 
                                 <a href="https://music.163.com/artist?id={{ item[1].artists[0].id}}" title={{item[1].artists[0].name}} class="singer_name">{{item[1].artists[0].name}}</a>
 
