index.html templates modularized

--- a/nembee/templates/index.html
+++ b/nembee/templates/index.html
@@ -1,134 +1,13 @@
+{% include "head.html" %}
+{% include "body.html" %}
+
 <html>
-
 <head>
-    <title>歌曲列表</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta content="always" name="referrer">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://test-mu.sddix.com:52313/public/asserts/css/vendor/vendor.min.css" rel="stylesheet">
-    <link href="http://test-mu.sddix.com:52313/public/asserts/css/main.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-<script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/es5-shim.min.js"></script>
-<script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/es5-sham.min.js"></script><![endif]-->
-    <!--[if lt IE 9]>
-<script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/html5shiv.min.js"></script>
-<script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/respond.min.js"></script><![endif]-->
-    <style type="text/css">
-        .toplist-btn-wrap {
-            float: left;
-            height: 64px;
-            margin-left: 10px;
-        }
-
-        .toplist-btn-wrap button {
-            height: 34px;
-            line-height: 34px;
-            background-color: #31c27c;
-            color: #fff;
-            border: none;
-            box-shadow: none;
-            width: 100px;
-        }
-
-        .songlist_company {
-            float: left;
-        }
-
-        .js_song {
-            width: 50%;
-        }
-    </style>
+    {% block head %}
+    {% endblock %}
 </head>
-
 <body>
-    <div class="main">
-
-        <div class="toplist_nav">
-            <dl class="toplist_nav_list">
-                <dt class="toplist_nav_tit">网易云排行榜</dt>
-
-                <dd class="toplist_nav_item"><a href="/chart/rise"
-                        class="toplist_nav_link toplist_nav_link--current">云音乐飙升榜</a></dd>
-                <dd class="toplist_nav_item"><a href="/chart/new"
-                        class="toplist_nav_link toplist_nav_link--current">云音乐新歌榜</a></dd>
-                <dd class="toplist_nav_item"><a href="/chart/original"
-                        class="toplist_nav_link toplist_nav_link--current">网易原创歌曲榜</a></dd>
-                <dd class="toplist_nav_item"><a href="/chart/hot"
-                        class="toplist_nav_link toplist_nav_link--current">云音乐热歌榜</a></dd>
-
-            </dl>
-
-        </div>
-
-
-        <div class="mod_toplist">
-            <div class="toplist_hd">
-                {% set charts = {
-                    'rise': '云音乐飙升榜',
-                    'new': '云音乐新歌榜',
-                    'original': '网易原创歌曲榜',
-                    'hot': '云音乐热歌榜',
-                } %}
-                <strong class="toplist_tit">{{ charts[title] }} {{ day }}</strong>
-                <form action="/chart/{{title}}">
-                    <div class="toplist-dp-wrap">
-                      <input type="text" value="{{today}}" name="day" class="form-control bs-date-picker">
-                    </div>
-                      <div class="toplist-btn-wrap">
-                        <button type="submit">查看</button>
-                      </div>
-                    </form>
-            </div>
-
-
-            <div class="mod_songlist">
-                <ul class="songlist_header">
-                    <li class="songlist_name">歌曲</li>
-                    <li class="songlist_author">歌手</li>
-                </ul>
-
-                <ul class="songlist_list">
-                    {% for item in j.items() %}
-                    <li mid={{ item[1].id }} ix="0">
-                        <div class="songlist_item" onmouseover="this.className=(this.className+' songlist_item--hover')"
-                            onmouseout="this.className=this.className.replace(/ songlist_item--hover/, '')">
-
-                            <div class="songlist_number  songlist_number--top">{{ item[0]}}</div>
-
-                            <div class="songlist_songname">
-
-                                <span class="songlist_songname_txt" style="visibility: visible;">
-                                    <a href="https://music.163.com/album?id={{ item[1].album.id }}" class="songlist_cover album_name"><img onerror="this.src='//y.gtimg.cn/mediastyle/global/img/album_300.png?max_age=31536000';this.onerror=null;"
-                                            src={{ item[1].album.blurPicUrl }}
-                                            alt={{ item[1].album.name }} class="songlist_pic" style="display: block; visibility: visible;"></a>
-                                    <a href="https://music.163.com/song?id={{ item[1].id }}" class="js_song" title={{ item[1].name }}>{{ item[1].name }}[唱片公司：{{ item[1].album.company or 'N/A' }}]</a>
-
-                                </span>
-
-
-                            </div>
-
-                            <div class="songlist_artist" title={{ item[1].artists[0].name }}>
-
-                                <a href="https://music.163.com/artist?id={{ item[1].artists[0].id}}" title={{item[1].artists[0].name}} class="singer_name">{{item[1].artists[0].name}}</a>
-
-                            </div>
-
-                        </div>
-                    </li>
-                    {% endfor %}
-                </ul>
-
-                <div class="nav-page">
-                        <nav aria-label="Page navigation" class="mod_page_nav js_pager">
-                                
-                              </nav> 
-                </div>
-
-        </div>
-
-    </div>
+    {% block body %}
+    {% endblock %}
 </body>
-
 </html>
