--- a/nembee/templates/head.html
+++ b/nembee/templates/head.html
@@ -6,37 +6,25 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta content="always" name="referrer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
+<!--original theme
 <link href="http://test-mu.sddix.com:52313/public/asserts/css/vendor/vendor.min.css" rel="stylesheet">
-<link href="http://test-mu.sddix.com:52313/public/asserts/css/main.css" rel="stylesheet">
+<link href="http://test-mu.sddix.com:52313/public/asserts/css/main.css" rel="stylesheet"> -->
 <!--[if lt IE 9]>
 <script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/es5-shim.min.js"></script>
 <script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/es5-sham.min.js"></script><![endif]-->
 <!--[if lt IE 9]>
 <script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/html5shiv.min.js"></script>
 <script src="http://test-mu.sddix.com:52313/public/asserts/js/vendor/respond.min.js"></script><![endif]-->
-<style type="text/css">
-    .toplist-btn-wrap {
-        float: left;
-        height: 64px;
-        margin-left: 10px;
-    }
 
-    .toplist-btn-wrap button {
-        height: 34px;
-        line-height: 34px;
-        background-color: #31c27c;
-        color: #fff;
-        border: none;
-        box-shadow: none;
-        width: 100px;
-    }
 
-    .songlist_company {
-        float: left;
-    }
+<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    .js_song {
-        width: 50%;
-    }
-</style>
 {% endblock %}
