--- a/nembee/templates/nav.html
+++ b/nembee/templates/nav.html
@@ -25,12 +25,13 @@
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                        <input id="datepicker" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <input id="datepicker" class="form-control mr-sm-2" type="search" placeholder="Search"
+                                aria-label="Search">
                         <script>
-                                        $('#datepicker').datepicker({
-                                            uiLibrary: 'bootstrap4'
-                                        });
-                                    </script>
+                                $('#datepicker').datepicker({
+                                        uiLibrary: 'bootstrap4'
+                                });
+                        </script>
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
         </div>
