--- a/charts/templates/stats.html
+++ b/charts/templates/stats.html
@@ -1,5 +1,5 @@
 {% block stats %}
-<div class="container-fluid">
+<div class="container">
 
     {% set charts = {
     'rise': '云音乐飙升榜',
@@ -8,33 +8,39 @@
     'hot': '云音乐热歌榜',
     } %}
 
-    <div class="card">
-        <div class="card-header">
-                <h5 class="text-center">
-                    {{ charts[title] }}</h5>
+    <h5 class="text-center">
+        {{ charts[title] }}</h5>
+
+
+    <p>
+        <a class="btn btn-primary" data-toggle="collapse" href="#stats_artist" role="button" aria-expanded="false"
+            aria-controls="stats">
+            artists
+        </a>
+        <a class="btn btn-primary" data-toggle="collapse" href="#stats_label" role="button" aria-expanded="false"
+            aria-controls="stats_label">
+            labels
+        </a>
+        
+    </p>
+    <div class="collapse" id="stats_artist">
+        <div class="card card-body">
+            <ul class="list-group list-group-flush">
+                {% for ma in most_artist %}
+                <li class="list-group-item col-6">
+                    <p class="card-text">{{ ma }}</p>
+                    <ul class="list-group list-group-flush">
+                        {% for song in ma_result[ma] %}
+                        <li>{{ song }}</li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                {% endfor %}
+            </ul>
         </div>
-        <div class="card card-body row" id="stats">
-            <div class="col-6">
-                <p>今日霸榜艺人</p>
-                <ul class="list-group list-group-flush">
-                    {% for ma in most_artist %}
-                    <li class="list-group-item col-6">
-                        <p class="card-text">{{ ma }}</p>
-                        <ul class="list-group list-group-flush">
-                            {% for song in ma_result[ma] %}
-                            <li>{{ song }}</li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    {% endfor %}
 
-            </div>
-            <div class="col-6" id="Company">
-                <P>今日霸榜公司</P>
-            </div>
         </div>
-
-        <div class="card-footer text-center"> {{ day }}</div>
-
-    </div>
-    {% endblock %}
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+{% endblock %}
