--- a/charts/templates/nav.html
+++ b/charts/templates/nav.html
@@ -14,10 +14,10 @@
                                         榜单列表
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="/chart/rise">云音乐飙升榜</a>
-                                        <a class="dropdown-item" href="/chart/new">云音乐新歌榜</a>
-                                        <a class="dropdown-item" href="/chart/original">网易原创歌曲榜</a>
-                                        <a class="dropdown-item" href="/chart/hot">云音乐热歌榜</a>
+                                        <a class="dropdown-item" href="/chart/nem_rise">云音乐飙升榜</a>
+                                        <a class="dropdown-item" href="/chart/nem_new">云音乐新歌榜</a>
+                                        <a class="dropdown-item" href="/chart/nem_original">网易原创歌曲榜</a>
+                                        <a class="dropdown-item" href="/chart/nem_hot">云音乐热歌榜</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">Something else here</a>
                                 </div>
