--- a/charts/templates/nav.html
+++ b/charts/templates/nav.html
@@ -19,20 +19,20 @@
                                         <a class="dropdown-item" href="/chart/nem_original">网易原创歌曲榜</a>
                                         <a class="dropdown-item" href="/chart/nem_hot">云音乐热歌榜</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <a class="dropdown-item" href="#">QQ音乐榜单（未完工）</a>
                                 </div>
                         </li>
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                        <input id="datepicker" class="form-control mr-sm-2" type="search" placeholder="Search"
+                        <input id="datepicker" class="form-control mr-sm-2" type="search" placeholder="选择日期"
                                 aria-label="Search">
                         <script>
                                 $('#datepicker').datepicker({
                                         uiLibrary: 'bootstrap4'
                                 });
                         </script>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button style='color:darkgray' class="btn btn-outline-light my-2 my-sm-0" type="submit">搜索</button>
                 </form>
         </div>
 </nav>
