--- a/charts/templates/songlist.html
+++ b/charts/templates/songlist.html
@@ -1,8 +1,9 @@
 {% block songlist %}
 <div class="container-fluid">
     <ul class="row">
-        {% for item in j.items() %}
-        <div class="card col-3" style="width: 18rem;">
+        {% for item in props.songlist.items() %}
+        <div class="card col-3 song-card {{ props.buildClass(props.delta(item[1].album.publishTime)) }}" style="width: 18rem;">
+            
             <a href="https://music.163.com/album?id={{ item[1].album.id }}">
                 <img onerror="this.src='//y.gtimg.cn/mediastyle/global/img/album_300.png?max_age=31536000';this.onerror=null;"
                     class="card-img-top" src="{{ item[1].album.blurPicUrl }}" alt="{{ item[1].album.name }} ">
@@ -17,7 +18,10 @@
                         <p class="card-text"> © {{ item[1].album.company or 'N/A' }}</p>
                     </li>
                     <li class="list-group-item">
-                        <p class="card-text"> {{ ft(item[1].album.publishTime) }}</p>
+                        <p class="card-text"> {{ props.ft(item[1].album.publishTime) }}</p>
+                    </li>
+                    <li class="list-group-item">
+                        <p class="card-text"> 发行于 {{ props.delta(item[1].album.publishTime).days }} 天前</p>
                     </li>
                 </ul>
             </div>
@@ -27,4 +31,5 @@
     </ul>
 
 </div>
+
 {% endblock %}
