frontend bug fixes; add footer

--- a/charts/templates/nav.html
+++ b/charts/templates/nav.html
@@ -11,7 +11,7 @@
                         <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        榜单列表
+                                        网易云音乐榜单
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/chart/nem_rise">云音乐飙升榜</a>
@@ -19,7 +19,20 @@
                                         <a class="dropdown-item" href="/chart/nem_original">网易原创歌曲榜</a>
                                         <a class="dropdown-item" href="/chart/nem_hot">云音乐热歌榜</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">QQ音乐榜单（未完工）</a>
+                                </div>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        QQ 音乐巅峰榜
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="/chart/qq_trends">流行指数</a>
+                                        <a class="dropdown-item" href="/chart/qq_hot">热歌</a>
+                                        <a class="dropdown-item" href="/chart/qq_new">新歌</a>
+                                        <a class="dropdown-item" href="/chart/qq_original">腾讯音乐人原创榜</a>
+                                        <div class="dropdown-divider"></div>
                                 </div>
                         </li>
 
