--- a/charts/templates/songlist.html
+++ b/charts/templates/songlist.html
@@ -1,27 +1,26 @@
 {% block songlist %}
 <div class="container-fluid">
     <ul class="row">
-        {% for item in props.songlist.items() %}
-        <div class="card col-3 song-card {{ props.buildClass(props.delta(item[1].album.publishTime)) }}" style="width: 18rem;">
+        {% for item in props.songlist %}
+        <div class="card col-3 song-card {{ props.buildClass(props.delta(item.release_date)) }}" style="width: 18rem;">
             
-            <a href="https://music.163.com/album?id={{ item[1].album.id }}">
+            <a href="{{ item.album_url }}">
                 <img onerror="this.src='//y.gtimg.cn/mediastyle/global/img/album_300.png?max_age=31536000';this.onerror=null;"
-                    class="card-img-top" src="{{ item[1].album.blurPicUrl }}" alt="{{ item[1].album.name }} ">
+                    class="card-img-top" src="{{ item.album_cover }}" alt="{{ item.album_title }} ">
             </a>
             <div class="card-body">
-                <span class="badge badge-pill badge-primary">{{ item[0] }}</span>
-                <h5 class="card-title"><a href="https://music.163.com/song?id={{ item[1].id }}" title={{ item[1].name }}>{{item[1].name
-                        }}</h5></a>
-                <p class="card-text"><a href="https://music.163.com/artist?id={{ item[1].artists[0].id}}" title={{item[1].artists[0].name}}>{{item[1].artists[0].name}}</a></p>
+                <span class="badge badge-pill badge-primary">{{ item.song_pos }}</span>
+                <h5 class="card-title"><a href="{{ item.song_url }}" title={{ item.song_title }}>{{ item.song_title }}</h5></a>
+                <p class="card-text"><a href="{{ item.artists[0].url }}" title={{ item.artists[0].name }}>{{ item.artists[0].name }}</a></p>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <p class="card-text"> © {{ item[1].album.company or 'N/A' }}</p>
+                        <p class="card-text"> © {{ item.company[0] or 'N/A' }}</p>
                     </li>
                     <li class="list-group-item">
-                        <p class="card-text"> {{ props.ft(item[1].album.publishTime) }}</p>
+                        <p class="card-text"> {{ props.ft(item.release_date) }}</p>
                     </li>
                     <li class="list-group-item">
-                        <p class="card-text"> 发行于 {{ props.delta(item[1].album.publishTime).days }} 天前</p>
+                        <p class="card-text"> 发行于 {{ props.delta(item.release_date).days }} 天前</p>
                     </li>
                 </ul>
             </div>
