--- a/charts/templates/index.html
+++ b/charts/templates/index.html
@@ -1,5 +1,6 @@
 {% include "head.html" %}
 {% include "body.html" %}
+{% include "footer.html" %}
 <!doctype html>
 <html>
 
@@ -18,6 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
 
+    {% block footer %}
+    {% endblock %}
+    
 </body>
 
 </html>
