--- a/charts/templates/body.html
+++ b/charts/templates/body.html
@@ -6,16 +6,23 @@
 
     {{ props.test }}
 
-    <h5 class="text-center page-title">
-            {{ props.chart_title }}</h5>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">{{ props.chart_title }}</h1>
+            <p class="lead"> {{ props.day }}</p>
+        </div>
+        <hr class="my-4">
+        {% include "tools.html" %}
+        {% block tools %}
+        {% endblock %}
+    </div>
     
+    <div class='container'>
+       
 
-    {% include "tools.html" %}
-    {% block tools %}
-    {% endblock %}
-
-    {% include "songlist.html" %}
-    {% block songlist %}
-    {% endblock %}
+        {% include "songlist.html" %}
+        {% block songlist %}
+        {% endblock %}
+    </div>
 
 {% endblock %}
