--- a/charts/templates/tools.html
+++ b/charts/templates/tools.html
@@ -15,29 +15,29 @@
 
 <div class='tools'>
     
-        <span class='badge badge-dark'>按日期显示</span>
+        <span class='badge badge-dark'>按发行日期显示</span>
 
         <div class="btn-group-toggle" role="group" data-toggle='buttons'>
             <label id='one_week' class="btn btn-info active">
                 <input type="checkbox" checked autocomplete="off">本周
             </label>
             <label id='two_weeks'  class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">两周前
+                <input type="checkbox" checked autocomplete="off">两周内
             </label>
             <label id='one_month' class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">一月前
+                <input type="checkbox" checked autocomplete="off">一月内
             </label>
             <label id='three_months' class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">三月前
+                <input type="checkbox" checked autocomplete="off">三月内
             </label>
             <label id='one_year' class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">一年前
+                <input type="checkbox" checked autocomplete="off">一年内
             </label>
             <label id='two_years' class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">两年前
+                <input type="checkbox" checked autocomplete="off">两年内
             </label>
             <label id='back_catalogue' class="btn btn-info active">
-                <input type="checkbox" checked autocomplete="off">更久
+                <input type="checkbox" checked autocomplete="off">更久以前
             </label>
             
         </div>
